	  apropos situations.

	o Renamed SQLQueryNEParms to BadParamCount, to match naming
	  style of other concrete exception types.

	o Extracted lock()/unlock() functions from Connection and
	  Query classes into a new Lockable interface class.

	o Removed ResUse::eof().  It's based on a deprecated MySQL
	  C API feature, and it isn't needed anyway.

	o Returned Row subscripting to something more like the
	  v1.7.9 scheme: there are two operator[] overloads, one for an
	  integer (field by index) and another for const char* (field
	  by name).  lookup_by_name() has been removed.  Because row[0]
	  is ambiguous again, added Row::at() (by analogy with STL
	  sequence containers), which always works.

	o Collapsed two of the Row::value_list*() overloads into
	  two other similar functions using default parameters.
	  This changes the API, but the removed functions aren't
	  used within the library, and I doubt they are used outside,
	  either.

	o Merged RowTemplate into Row.

	o Merged SQLQuery class into Query class.

	o Query is now derived from std::ostream instead of
	  std::stringstream, and we manage our own internal string
	  buffer.

	o Moved SQLParseElement and SQLQueryParms into their own
	  module, qparms.

	o Added multiple result set handling to Query.	MySQL 4.1
	  and higher allow you to give multiple SQL statements in a
	  single "store" call, which requires extensions to MySQL++
	  so you can iterate through the multiple result sets.	Also,
	  stored procedures in MySQL 5.0 reportedly return multiple
	  result sets.	Thanks for the initial patch go to Arnon Jalon;
	  I reworked it quite a bit.

	o Collapsed mysql_* date and time base classes' methods and
	  data into the subclasses.  Also, DateTime no longer derives
	  from Date and Time; you could get away with that in the
	  old hierarchy, but now it creates an inheritance diamond,
	  and allows unsupported concepts like comparing a Time to
	  a DateTime.
