@@ -13,7 +13,13 @@ widely useful.  Patches or proposals of this sort are always welcome.
 Final v2.0 Stuff
 ----------------
 
-	o Decide what to do about subscript_iterator bugs.
+	o Decide whether to make simple1 example simpler by hoisting copy
+	  of util code up into it.  Maybe change SELECT statement to get
+	  just one row, and print just that one.
+
+	o Library versioning simplification stuff.
+
+	o Get MinGW build working.  It _can_ be done...
 
 
 Future Features
